# tnn

./: CODEOWNERS  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/: secret_scanning.yml
.github/workflows/: quality_assurance.yml  security-review.yml
.telenor/: security.yml
builtin_extensions/marketplace/ext/: Cargo.toml
builtin_extensions/marketplace/ext/src/: lib.rs
builtin_extensions/test/ext/: Cargo.toml
builtin_extensions/test/ext/src/: lib.rs
core/: Cargo.toml
core/src/: core.rs  lib.rs
core/src/calls/: add_command.rs  mod.rs  with_core.rs
docs/errors/: NO_UNSAFE_OP.md
ext_tnn/: Cargo.toml
ext_tnn/src/: call_context.rs  extension_context.rs  mixin.rs  repository.rs
extension/: Cargo.toml
extension/src/: call.rs  call_context.rs  dependency.rs  extension.rs  extension_context.rs  internal.rs  lib.rs  mixin.rs  opaque_fn.rs  repository.rs
extension_loader/: Cargo.toml
extension_loader/src/: lib.rs  os.rs
extension_repository/: Cargo.toml
extension_repository/src/: extension_impl.rs  extension_protocol.rs  extension_repository.rs  lib.rs  repository_context.rs
extensions/example1/: Cargo.toml
extensions/example1/src/: lib.rs
extensions/example2/: Cargo.toml
extensions/example2/src/: lib.rs
extensions/example3/: Cargo.toml
extensions/example3/src/: lib.rs
extensions/example4/: Cargo.toml
extensions/example4/src/: lib.rs
extensions/example5/: Cargo.toml
extensions/example5/src/: lib.rs
itnn_core/: Cargo.toml
itnn_extension/: Cargo.toml
itnn_extension/src/: dependency.rs  extension.rs  extension_context.rs  lib.rs  op.rs
itnn_extension_macros/: Cargo.toml
itnn_extension_macros/src/: extension.rs  lib.rs  op.rs
itnn_extension_util_macros/: Cargo.toml
itnn_extension_util_macros/src/: lib.rs
itnn_reexports/: Cargo.toml
itnn_reexports/src/: lib.rs
itnn_util/: Cargo.toml
itnn_util/src/: lib.rs
showcase/showcase1/: Cargo.toml
showcase/showcase1/src/: api.rs  lib.rs
showcase/showcase1/src/ops/: greet.rs  hello.rs  mod.rs
src/: lib.rs  main.rs  not_implemented_error.rs  status.rs
src/classic_id/: README.md  mod.rs
src/cli/: mod.rs
src/cli/az/: login.rs  mod.rs
src/cli/id/: classic.rs  mod.rs
src/cli/op/: mod.rs  shell.rs
src/cli/op/secrets/: mod.rs  unseal.rs
src/core/: app.rs  extension.rs  mod.rs
src/core/api/: core.rs  mod.rs
src/core/api/calls/: with_core.rs
src/core/api/helper/: add_command.rs  mod.rs
src/core/extension/: extension.rs  mod.rs
src/extension/: call.rs  call_context.rs  extension.rs  extension_context.rs  mixin.rs  mod.rs  opaque_fn.rs  repository.rs
src/log/: internals.rs  mod.rs
src/repository/: extension_impl.rs  extension_protocol.rs  extension_repository.rs  repository_context.rs
src/requests/: client.rs  fetch.rs  mod.rs
src/util/: extension_loader.rs  mod.rs  parent_command.rs
state/: Cargo.toml
state/src/: lib.rs
tnn/: Cargo.toml
tnn/src/: lib.rs  main.rs
tnn_core/: Cargo.toml
tnn_core/src/: core.rs
tnn_core/src/calls/: with_core.rs
tnn_core/src/helper/: add_command.rs
util_tnn_ext_loader/: Cargo.toml
util_tnn_ext_loader/src/: ext.rs  lib.rs
util_tnn_logs/: Cargo.toml
util_tnn_logs/src/: internals.rs  lib.rs
util_tnn_opaque_function/: Cargo.toml
util_tnn_opaque_function/src/: lib.rs
util_tnn_parent_command/: Cargo.toml
util_tnn_parent_command/src/: lib.rs
util_tnn_repo/: Cargo.toml
util_tnn_repo/src/: extension_protocol.rs  extension_repository.rs
util_tnn_state/: Cargo.toml
