[package]
name = "tnn"
description = "A quality of life developer tool to interact with Telenor services"
version = "0.1.1"
edition = "2021"
authors = ["Telenor"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["builtin_extensions/test/ext"]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
clap = { version = "4.4.4", features = ["derive"] }
glob = "0.3.1"
libloading = "0.8.1"
const_format = "0.2.31"
async-recursion = "1.0.5"
semver = "1.0.19"
