[workspace]
members = ["itnn_*", "tnn", "showcase/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Telenor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/TelenorNorway/tnn"

[workspace.dependencies]
# Local Dependencies
itnn_core = { version = "0.2.0", path = "./itnn_core" }
itnn_extension = { version = "0.2.0", path = "./itnn_extension" }
itnn_extension_macros = { version = "0.2.0", path = "./itnn_extension_macros" }
itnn_extension_util_macros = { version = "0.2.0", path = "./itnn_extension_util_macros" }
itnn_reexports = { version = "0.2.0", path = "./itnn_reexports" }
itnn_util = { version = "0.2.0", path = "./itnn_util" }
tnn = { version = "0.2.0", path = "./tnn" }

showcase1 = { version = "0.2.0", path = "./showcase/showcase1" }

# External Dependencies
tokio = { version = "1.32", features = ["full"] }
anyhow = "1"
thiserror = "1"
quote = "1"
proc-macro2 = "1"
paste = "1"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
serde = { version = "1.0", features = ["derive"] }
const_format = "0.2"
semver = "1.0"
