[package]
name = "ext_tnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util_tnn_state = { path = "../util_tnn_state" }
thiserror = "1.0.48"
tokio = "1.32.0"
const_format = "0.2.31"
anyhow = "1.0.75"
