[package]
name = "util_tnn_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util_tnn_logs = { path = "../logs" }
util_tnn_state = { path = "../state" }
ext_tnn = { path = "../extension" }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
semver = "1.0.18"
async-recursion = "1.0.5"
