[package]
name = "itnn_extension"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
itnn_extension_util_macros.workspace = true
anyhow.workspace = true
serde.workspace = true
paste.workspace = true
const_format.workspace = true
