[package]
name = "itnn_extension_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
itnn_extension.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
semver.workspace = true
