[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tnn_core = { path = "../../../core" }
ext_tnn = { path = "../../../extension" }
util_tnn_logs = { path = "../../../logs" }
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
